adds section templates and styling. updates templates to sit within a page__wrapper that bumps the page down to fit the fixed nav.

--- a/pages/index.html
+++ b/pages/index.html
@@ -14,7 +14,7 @@
     {% set home = cms.ph2home %}
   {% endif %}
 
-  <main>
+  <main class="page__wrapper">
 
     {# Poster Moment Gallery Specification --- Start #}
 
